Changed header to prevent layout shift

--- a/app/(root)/page.module.css
+++ b/app/(root)/page.module.css
@@ -15,38 +15,11 @@
   flex-direction: column;
 }
 
-.content-header {
+.header-section {
   display: flex;
-  gap: 20px;
-  align-items: end;
-}
-.content-header > h1 {
-  font-size: var(--fs-header-2);
-  font-weight: 600;
-}
-
-.view-options-container {
-  padding-bottom: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3px;
-}
-.view-options-container > span {
-  font-size: var(--fs-filter-body);
-}
-
-.view-option {
-  display: block;
-  font-size: var(--fs-options);
-  height: fit-content;
-  color: var(--color-grey-500);
-}
-.display-option {
-  user-select: none;
-}
-.view-option:hover, .display-option:hover {
-  color: var(--color-purple-500);
+  flex-direction: column;
+  justify-content: end;
+  height: 230px;
 }
 
 
